--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,94 @@
+::placeholder {
+    color: lightgray;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
+    opacity: 1;
+    /* Firefox Compatibility */
+}
+:-ms-input-placeholder {
+    color: lightgray;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
+    /* IE 10-11 Compatibility */
+}
+::-ms-input-placeholder {
+    color: lightgray;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
+    opacity: 1;
+    /* Edge Compatibility */
+}
 a:link {
     text-decoration: none;
 }
-body {
+footer a {
+    color: lightgray;
+}
+footer a:hover {
+    color: #4aaaa5;
+}
+html, body {
     box-sizing: border-box;
     background-image: url("../images/halftone.png");
     color: #777777;
+    display: flex; /* For sticky footer */
+    flex-direction: column; /* For sticky footer */
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    height: 100%; /* For sticky footer */
     line-height: 150%;
 }
 hr {
     border: solid;
     border-color: lightgrey;
     border-width: 1px;
+}
+input[type=text]:focus {
+    outline-color: #4aaaa5;
+}
+input[type=text], select {
+    /* display: inline-block; */
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin: 8px 0;
+    padding: 8px 10px;
+    width: 100%;
+}
+#subject input[type=text], textarea {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
+    height: 125px;
+    padding-left: 10px;
+    padding-top: 8px;
+    resize: vertical;
+    width: 98%;
+}
+input[type=reset] {
+    background: #4aaaa5;
+    /* border: none; Looks nicer with border */
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 12px 20px;
+    width: 100px;
+}
+input[type="reset"]:hover {
+    opacity: 0.8;
+}
+input[type=submit] {
+    background: #4aaaa5;
+    /* border: none; Looks nicer with border */
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    margin-right: 10px;
+    padding: 12px 20px;
+    width: 100px;
+}
+input[type="submit"]:hover {
+    opacity: 0.8;
 }
 #aboutMe,
 #portfolio {
@@ -20,22 +97,46 @@ hr {
     border-color: lightgray;
     border-width: 1px;
     clear: both;
+    flex: 1 0 auto; /* For sticky footer */
     margin: auto;
     overflow: auto;
     padding: 10px 20px 20px 20px;
     width: 920px;
 }
 #aboutMeHeader,
+#contactFormHeader,
 #portfolioHeader {
     color: #4aaaa5;
     font-family: Georgia, Times, Times New Roman, serif;
     font-size: 26px;
     font-weight: bold;
-    line-height: 60px;
+    line-height: 50px; /* Centering text vertically */
+    padding-top: 10px;
 }
 #aboutMeImg {
     float: left;
     padding-right: 20px;
+}
+#contactForm {
+    background: #ffffff;
+    border: solid;
+    border-color: lightgray;
+    border-width: 1px;
+    color: #777777;
+    float: left;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 10px 20px 20px 20px;
+    width: 640px;
+}
+#contactFormMessage {
+    height: 50px;
+}
+#contactFormWrapper {
+    clear: both;
+    flex: 1 0 auto; /* For sticky footer */
+    margin: auto;
+    overflow: auto;
+    width: 960px;
 }
 #links {
     float: right;
@@ -45,7 +146,7 @@ hr {
     word-spacing: 10px;
 }
 #links a {
-    color: #777;
+    color: #777777;
 }
 #links a:hover {
     color: #4aaaa5;
@@ -69,13 +170,39 @@ hr {
     background: #ffffff;
     border-bottom: solid;
     border-color: lightgray;
-    border-width: 1px;
+    border-width: 2px;
     height: 75px;
     margin: 0;
 }
 #navContent {
     margin: 0 auto;
     width: 960px;
+}
+#socialMediaPanel {
+    background: #ffffff;
+    border: solid;
+    border-color: lightgray;
+    border-width: 1px;
+    float: right;
+    padding: 10px 20px 20px 20px;
+    width: 175px;
+}
+#socialMediaPanelLinks {
+    padding-top: 5px;
+    word-spacing: 10px;
+}
+#socialMediaPanelLinks a img {
+    border-radius:10px; /* Rounding out the image edges */
+}
+#socialMediaPanelLinks a img:hover {
+    opacity: 0.3;
+}
+#socialMediaPanelHeader {
+    color: #4aaaa5;
+    font-family: Georgia, Times, Times New Roman, serif;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 30px; /* Centering text vertically */
 }
 .imageLabelBox{
     background: #4aaaa5;
@@ -99,6 +226,18 @@ hr {
     height:200px;
     padding-right: 20px;
     width: 300px;
+}
+.pagefooter {
+    background: #777777;
+    border-top: solid;
+    border-color: #4aaaa5;
+    border-width: 3px;
+    color: lightgray;
+    flex-shrink: 0; /* For sticky footer */
+    font-size: 12px;
+    line-height: 40px;  /* Centering text vertically */
+    /* margin: 0 auto; */
+    text-align: center;
 }
 .portfolioRow {
     clear: both;
