--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,19 @@
-::placeholder {
+::placeholder {     /* Firefox Compatibility */
     color: lightgray;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
     opacity: 1;
-    /* Firefox Compatibility */
 }
-:-ms-input-placeholder {
+:-ms-input-placeholder {     /* IE 10-11 Compatibility */
     color: lightgray;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
-    /* IE 10-11 Compatibility */
 }
-::-ms-input-placeholder {
+::-ms-input-placeholder {     /* Edge Compatibility */
     color: lightgray;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
     opacity: 1;
-    /* Edge Compatibility */
 }
 a:link {
     text-decoration: none;
@@ -46,7 +43,6 @@ input[type=text]:focus {
     outline-color: #4aaaa5;
 }
 input[type=text], select {
-    /* display: inline-block; */
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
@@ -236,7 +232,6 @@ input[type="submit"]:hover {
     flex-shrink: 0; /* For sticky footer */
     font-size: 12px;
     line-height: 40px;  /* Centering text vertically */
-    /* margin: 0 auto; */
     text-align: center;
 }
 .portfolioRow {
