--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,26 +4,32 @@
     font-size: 14px;
     opacity: 1;
 }
+
 :-ms-input-placeholder {     /* IE 10-11 Compatibility */
     color: lightgray;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
 }
+
 ::-ms-input-placeholder {     /* Edge Compatibility */
     color: lightgray;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
     opacity: 1;
 }
+
 a:link {
     text-decoration: none;
 }
+
 footer a {
     color: lightgray;
 }
+
 footer a:hover {
     color: #4aaaa5;
 }
+
 html, body {
     box-sizing: border-box;
     background-image: url("../images/halftone.png");
@@ -34,14 +40,17 @@ html, body {
     height: 100%; /* For sticky footer */
     line-height: 150%;
 }
+
 hr {
     border: solid;
     border-color: lightgrey;
     border-width: 1px;
 }
+
 input[type=text]:focus {
     outline-color: #4aaaa5;
 }
+
 input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -50,6 +59,7 @@ input[type=text], select {
     padding: 8px 10px;
     width: 100%;
 }
+
 #subject input[type=text], textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -61,6 +71,7 @@ input[type=text], select {
     resize: vertical;
     width: 98%;
 }
+
 input[type=reset] {
     background: #4aaaa5;
     /* border: none; Looks nicer with border */
@@ -70,9 +81,11 @@ input[type=reset] {
     padding: 12px 20px;
     width: 100px;
 }
-input[type="reset"]:hover {
+
+input:hover {
     opacity: 0.8;
 }
+
 input[type=submit] {
     background: #4aaaa5;
     /* border: none; Looks nicer with border */
@@ -83,9 +96,7 @@ input[type=submit] {
     padding: 12px 20px;
     width: 100px;
 }
-input[type="submit"]:hover {
-    opacity: 0.8;
-}
+
 #aboutMe,
 #portfolio {
     background: #ffffff;
@@ -99,6 +110,7 @@ input[type="submit"]:hover {
     padding: 10px 20px 20px 20px;
     width: 920px;
 }
+
 #aboutMeHeader,
 #contactFormHeader,
 #portfolioHeader {
@@ -109,10 +121,15 @@ input[type="submit"]:hover {
     line-height: 50px; /* Centering text vertically */
     padding-top: 10px;
 }
+
 #aboutMeImg {
+    border-radius: 25px;
     float: left;
-    padding-right: 20px;
+    height: 300px;
+    margin-right: 20px;
+    width: 400px;
 }
+
 #contactForm {
     background: #ffffff;
     border: solid;
@@ -124,9 +141,11 @@ input[type="submit"]:hover {
     padding: 10px 20px 20px 20px;
     width: 640px;
 }
+
 #contactFormMessage {
     height: 50px;
 }
+
 #contactFormWrapper {
     clear: both;
     flex: 1 0 auto; /* For sticky footer */
@@ -134,6 +153,7 @@ input[type="submit"]:hover {
     overflow: auto;
     width: 960px;
 }
+
 #links {
     float: right;
     height: 75px;
@@ -141,12 +161,15 @@ input[type="submit"]:hover {
     width: 225px;
     word-spacing: 10px;
 }
+
 #links a {
     color: #777777;
 }
+
 #links a:hover {
     color: #4aaaa5;
 }
+
 #logo {
     background: #4aaaa5;
     float: left;
@@ -154,6 +177,7 @@ input[type="submit"]:hover {
     padding-left: 20px;
     padding-right: 20px;
 }
+
 #logoHeader {
     color: white;
     margin: auto;
@@ -162,6 +186,7 @@ input[type="submit"]:hover {
     font-weight: bold;
     line-height: 75px; /* Centering text vertically */
 }
+
 #navBar {
     background: #ffffff;
     border-bottom: solid;
@@ -170,10 +195,12 @@ input[type="submit"]:hover {
     height: 75px;
     margin: 0;
 }
+
 #navContent {
     margin: 0 auto;
     width: 960px;
 }
+
 #socialMediaPanel {
     background: #ffffff;
     border: solid;
@@ -183,16 +210,20 @@ input[type="submit"]:hover {
     padding: 10px 20px 20px 20px;
     width: 175px;
 }
+
 #socialMediaPanelLinks {
     padding-top: 5px;
     word-spacing: 10px;
 }
+
 #socialMediaPanelLinks a img {
     border-radius:10px; /* Rounding out the image edges */
 }
+
 #socialMediaPanelLinks a img:hover {
     opacity: 0.3;
 }
+
 #socialMediaPanelHeader {
     color: #4aaaa5;
     font-family: Georgia, Times, Times New Roman, serif;
@@ -200,6 +231,7 @@ input[type="submit"]:hover {
     font-weight: bold;
     line-height: 30px; /* Centering text vertically */
 }
+
 .imageLabelBox{
     background: #4aaaa5;
     color: #ffffff;
@@ -207,22 +239,29 @@ input[type="submit"]:hover {
     text-align: center;
     width: 300px;
 }
+
 .imageLabel1{
+    border-radius: 0 0 7px 7px;
     color: #ffffff;
     position: absolute;
     top: 150px;
 }
+
 .imageLabel2{
+    border-radius: 0 0 7px 7px;
     left: 320px;
     position: absolute;
     top: 150px;
 }
+
 .images {
+    border-radius: 20px;
     float: left;
-    height:200px;
-    padding-right: 20px;
+    height: 200px;
+    margin-right: 20px;
     width: 300px;
 }
+
 .pagefooter {
     background: #777777;
     border-top: solid;
@@ -234,11 +273,13 @@ input[type="submit"]:hover {
     line-height: 40px;  /* Centering text vertically */
     text-align: center;
 }
+
 .portfolioRow {
     clear: both;
     overflow: auto;
     position: relative;
 }
+
 .portfolioRow a img:hover {
     opacity: 0.3;
 }
